--- a/notebook/Simulazione_Controllo_Digitale.ipynb
+++ b/notebook/Simulazione_Controllo_Digitale.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "49384987",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "4deb57ba",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "df812c21",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "7e0a5859",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "357af754",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "id": "bb0fbadb",
    "metadata": {},
    "outputs": [
@@ -417,6 +417,7 @@
     "axs[1].grid(True)\n",
     "\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"../plots/performance_comparison_gamma_vs_wd.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -430,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "id": "dec9d498",
    "metadata": {},
    "outputs": [
@@ -508,6 +509,7 @@
     "plt.xlim(0, 3.0) \n",
     "plt.ylim(0, 1.4)\n",
     "\n",
+    "plt.savefig(\"../plots/deadbeat_vs_continuous.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   }
